--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 								<h1>Hi, my name is Prachi</h1>
 							</header>
 							<div class="content">
-								<h4>Welcome!! <br><br>
+								<h4>Welcome to my Portfolio!! <br><br>
 									I am a software developer who also likes to draw!</h4>
 								<ul class="actions">
 									<li><a href="#one" class="button next scrolly">Get Started</a></li>
